--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.7",
     "react": "^18.3.1",
