--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -19,7 +20,7 @@
     "sequelize": "^6.37.3"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \" node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
